# display-binding-rs

./: README.md
afb-binding/: Cargo.toml
afb-binding/etc/: binder-display.json  binding-display.json  binding-native-lvgl.json  binding-target.json  binding-test.sh  start-binder.sh
afb-binding/src/: binding.rs  libso.rs  types.rs  verbs.rs
afb-types/: Cargo.toml  check-type-rs.sh  update-type-rs.sh
afb-types/src/: am62x-types.rs  chmgr-types.rs  engy-types.rs
lvgl-gui/: Cargo.toml
lvgl-gui/assets/: @img-assets.c  @img-assets.rs  logo_iot_bzh_flat.c  logo_valeo.c
lvgl-gui/capi/: build.rs  capi-mod.rs
lvgl-gui/src/: display-lvgl.rs  libso.rs
lvgl-lib/src/: widgets.rs
