[package]
name = "display_lvgl_gui"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
lvgl = {git= "https://github.com/tux-evse/lvgl-rclib-rs", branch="main", optional = true}

[build-dependencies]
bindgen    = ">=0.6"
cc = "1"

[lib]
name = "display_lvgl_gui"
crate-type = ["lib"]
path = "src/libso.rs"


